fixing swagger api doc
